--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.6.2",
+    "@contentful/rich-text-types": "^15.7.0",
+    "contentful": "^9.1.4",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
