--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "@contentful/rich-text-types": "^15.7.0",
+    "@formcarry/react": "^1.0.3",
     "contentful": "^9.1.4",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
